--- a/cubatao.html
+++ b/cubatao.html
@@ -9,6 +9,7 @@
     <div>
 
         <h1>Cubatão</h1>
+        <p>Cubatão é uma cidade localizada no estado de São Paulo, Brasil, e é conhecida por seu perfil industrial marcante. Sua economia é impulsionada por refinarias de petróleo, indústrias químicas e siderúrgicas, destacando-se como um centro industrial na Região Metropolitana da Baixada Santista.</p>
         <hr>
         <a href="index.html">voltar</a>
 
