--- a/guaruja.html
+++ b/guaruja.html
@@ -9,6 +9,8 @@
     <div>
 
         <h1>Guarujá</h1>
+        <p>
+            Guarujá, situada no litoral de São Paulo, é uma cidade encantadora conhecida por suas deslumbrantes praias e atmosfera turística. Suas extensas faixas de areia, como Enseada, Pitangueiras, Pernambuco e Tombo, oferecem não apenas belas paisagens, mas também uma variedade de atividades que vão desde esportes aquáticos até momentos tranquilos à beira-mar.</p>
         <hr>
         <a href="index.html">voltar</a>
 
