--- a/itanhaem.html
+++ b/itanhaem.html
@@ -9,6 +9,8 @@
     <div>
 
         <h1>Itanhaém</h1>
+        <p>
+            Itanhaém, situada no litoral sul do estado de São Paulo, é uma cidade que mescla história, belezas naturais e uma atmosfera tranquila. Com suas praias extensas e preservadas, como a Praia dos Sonhos e a Praia do Cibratel, a cidade atrai tanto moradores quanto visitantes em busca de um ambiente mais sereno.</p>
         <hr>
         <a href="index.html">voltar</a>
 
