--- a/mongagua.html
+++ b/mongagua.html
@@ -9,6 +9,8 @@
     <div>
 
         <h1>Mongaguá</h1>
+        <p>
+            Mongaguá, localizada no litoral sul de São Paulo, é uma cidade que oferece uma combinação de belas praias, atrativos naturais e uma atmosfera descontraída. Suas extensas faixas de areia, como a Praia do Centro e a Praia da Agenor de Campos, proporcionam um ambiente propício para atividades ao ar livre, desde caminhadas à beira-mar até esportes náuticos.</p>
         <hr>
         <a href="index.html">voltar</a>
 
