--- a/santos.html
+++ b/santos.html
@@ -9,6 +9,8 @@
     <div>
 
         <h1>Santos</h1>
+        <p>
+            Santos, situada no litoral do estado de São Paulo, destaca-se por sua rica história, influência portuária e encantadora atmosfera à beira-mar. As icônicas praias, como a Praia do Gonzaga, Praia do Boqueirão e Praia da Aparecida, atraem residentes e turistas para desfrutar de momentos de lazer e participar de eventos culturais.</p>
         <hr>
         <a href="index.html">voltar</a>
 
