--- a/peruibe.html
+++ b/peruibe.html
@@ -9,6 +9,8 @@
     <div>
 
         <h1>Peruíbe</h1>
+        <p>
+            Peruíbe, localizada no litoral sul do estado de São Paulo, é uma cidade que se destaca por suas praias preservadas e pela integração harmoniosa entre natureza e urbanização. Suas extensas faixas de areia, como a Praia do Centro e a Praia do Guaraú, oferecem aos moradores e visitantes espaços para atividades recreativas, banhos de sol e contemplação do mar.</p>
         <hr>
         <a href="index.html">voltar</a>
 
