--- a/praiag.html
+++ b/praiag.html
@@ -9,6 +9,7 @@
     <div>
 
         <h1>Praia Grande</h1>
+        <p>Praia Grande, situada no litoral de São Paulo, é uma cidade que se destaca por suas extensas praias, infraestrutura turística e atividades de lazer. Com uma atmosfera vibrante, a cidade atrai moradores locais e turistas ao longo do ano.</p>
         <hr>
         <a href="index.html">voltar</a>
 
