--- a/bertioga.html
+++ b/bertioga.html
@@ -8,8 +8,47 @@
 <body>
     <div>
 
+        <div>
         <h1>Bertioga</h1>
-        
+        <p>Bertioga, localizada no litoral do estado de São Paulo, é uma cidade encantadora que mescla belezas naturais, patrimônio histórico e atmosfera litorânea. Suas praias, como a Praia da Enseada e Guaratuba, atraem visitantes em busca de relaxamento à beira-mar e atividades aquáticas.</p>
+        </div>
+
+        <div>
+        <h2>Pontos turisticos de Bertioga</h2>
+        <h3>Canal de Bertioga</h3>
+
+        <p>O Canal de Bertioga é conhecido por sua beleza e tranquilidade. Possui 30 km de extensão entre a praia da Enseada, em Bertioga e Santos, ao lado da Base Aérea.</p>
+
+        <p>O local é um excelente ponto de pesca e dele pode-se avistar importantes pontos turísticos de Bertioga. Entre eles o Forte São João, os píeres, as marinas, os manguezais, a foz do rio Itapanhaú e a balsa que faz a travessia Bertioga Guarujá.</p>
+
+        <p>Paralela ao Canal, encontra-se a avenida Vicente de Carvalho, onde é possível encontrar várias opções de lazer e serviços como o Mercado Municipal de Pescados.</p>
+
+        <p>O comércio local é bastante diversificado com restaurantes, sorveterias, cafeterias, lojas de artigos esportivos. Há também barracas de artesanato dispostas numa das áreas mais movimentadas da cidade.</p>
+        </div>
+
+        <div>
+            <h3>Fonte São João</h3>
+
+            <p>O Forte São João, é uma importante construção histórica que remonta aos primórdios da colonização portuguesa no Brasil. Construído no século XVI, mais precisamente em 1547, o forte foi erguido para garantir a defesa da costa contra possíveis invasões estrangeiras e ataques de piratas.</p>
+
+            <p>A edificação apresenta características arquitetônicas típicas da época, sendo um exemplo significativo da arquitetura militar colonial. Estrategicamente posicionado na entrada do Canal de Bertioga, o Forte São João tinha como objetivo controlar o acesso à então recém-descoberta Capitania de São Vicente.</p>
+
+            <p>Além das exposições históricas, o forte oferece uma vista panorâmica privilegiada da região, proporcionando uma experiência enriquecedora aos visitantes. O Forte São João, assim, desempenha um papel fundamental ao preservar a memória histórica de Bertioga e contribuir para a compreensão do período colonial brasileiro.</p>
+        </div>
+
+        <div>
+            <h3>Aldeia Guarani Rio Silveira</h3>
+
+            <p>A Aldeia Guarani Rio Silveira é uma aldeia indígena fundada por um grupo mbyá que se estabeleceu na região nos anos 1940 . A aldeia oferece uma experiência cultural única e é um ótimo lugar para aprender sobre a cultura indígena. A aldeia é composta por cerca de 500 índios que cultivam palmito e plantas ornamentais, produzem artesanato e apresentam aos visitantes suas danças, músicas e culinária típica. </p> 
+            <p>A aldeia está situada no quilômetro 183 da rodovia Manoel Hipolyto Rego, na divisa entre Bertioga e São Sebastião, em Boráceia, bairro da região sul de Bertioga. São oferecidas visitas monitoradas no local, que podem ser agendadas </p>
+        </div>
+
+        <div>
+
+            <h3>Vila de Itatinga</h3>
+            <p>A Vila de Itatinga é uma vila histórica. Ela foi construída em 1910 e abriga a primeira </p>            
+
+        </div>
         <hr>
         <a href="index.html">voltar</a>
 
