--- a/bertioga.html
+++ b/bertioga.html
@@ -46,8 +46,16 @@
         <div>
 
             <h3>Vila de Itatinga</h3>
-            <p>A Vila de Itatinga é uma vila histórica. Ela foi construída em 1910 e abriga a primeira </p>            
+            <p>A Vila de Itatinga é um tesouro histórico notável. Abrigando a Usina Hidrelétrica de Itatinga, responsável por fornecer aproximadamente 80% da energia utilizada no Porto de Santos, sua importância é incontestável. Inaugurada em 1910, a vila ostenta cerca de 70 residências em estilo inglês, remanescentes do início do século passado.</p>     
+            <p>Apesar de sua significância, a Vila de Itatinga não está acessível ao público em geral desde que casos de malária foram registrados na região. Mesmo antes dessa proibição, a visitação à vila era restrita, exigindo a mediação de agências autorizadas e a concessão de permissão pela CODESP (Companhia Docas do Estado de São Paulo), agora conhecida como Autoridade Portuária de Santos S.A.</p>    
+            <p>Considerada um autêntico santuário ecológico, a vila desfruta de uma diversidade impressionante de ecossistemas, enraizada na exuberante Mata Atlântica e aninhada no Sopé da Serra do Mar.</p>   
 
+        </div>
+
+        <div>
+            <h3>Praia de Guaratuba</h3>
+            <p>A Praia de Guaratuba é um refúgio tranquilo caracterizado por suas águas cristalinas e areias brancas. Rodeada pela exuberante Mata Atlântica, oferece um ambiente isolado que atrai visitantes em busca de serenidade e relaxamento. Suas extensas faixas de areia convidam a revigorantes caminhadas à beira-mar, enquanto as águas límpidas proporcionam oportunidades para mergulho e esportes aquáticos.</p>
+            <p>Além da sua beleza natural, a Praia de Guaratuba é um destino atraente para entusiastas da pesca, com áreas propícias ao longo da costa. O ambiente tranquilo também proporciona um cenário ideal para momentos de contemplação e apreciação do pôr do sol espetacular, oferecendo aos visitantes uma experiência memorável de conexão com a natureza. </p>
         </div>
         <hr>
         <a href="index.html">voltar</a>
