--- a/guaruja.html
+++ b/guaruja.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Guaruját</title>
+    <title>Guarujá</title>
 </head>
 <body>
     <div>
@@ -11,6 +11,38 @@
         <h1>Guarujá</h1>
         <p>
             Guarujá, situada no litoral de São Paulo, é uma cidade encantadora conhecida por suas deslumbrantes praias e atmosfera turística. Suas extensas faixas de areia, como Enseada, Pitangueiras, Pernambuco e Tombo, oferecem não apenas belas paisagens, mas também uma variedade de atividades que vão desde esportes aquáticos até momentos tranquilos à beira-mar.</p>
+
+            <h2>Pontos turisticos de Guarujá</h2>
+
+            <div>
+                <h3>Praia das Astúrias</h3>
+                <p>A Praia das Astúrias é um refúgio costeiro conhecido por suas águas calmas e cristalinas, tornando-se uma escolha perfeita para famílias, especialmente com crianças. Sua extensa faixa de areia, com aproximadamente 1 km de extensão, convida a caminhadas e corridas à beira-mar, proporcionando um ambiente acolhedor para desfrutar do sol e das atividades à beira da praia.</p>
+                <p>Cercada por quiosques e edifícios, a orla da Praia das Astúrias oferece opções gastronômicas à beira-mar, enquanto os arredores proporcionam praticidade com uma variedade de estabelecimentos, desde restaurantes e lanchonetes até farmácias, supermercados e outras comodidades. Este destino litorâneo destaca-se como um local propício para relaxar, apreciar o mar tranquilo e aproveitar momentos descontraídos em uma atmosfera costeira encantadora.</p>
+            </div>
+
+            <div>
+                <h3>Praia do Tombo</h3>
+                <p>A Praia do Tombo é reconhecida por suas ondas fortes e areia branca, tornando-a uma escolha ideal para os entusiastas do surf. Além de atrair surfistas, a praia é uma das mais famosas e movimentadas da cidade, oferecendo um mar calmo e transparente que é perfeito não apenas para nadadores, mas também para famílias com crianças que desejam desfrutar da praia com segurança. Com uma faixa de areia generosa, estendendo-se por cerca de 1 km, a Praia do Tombo convida os visitantes a caminhadas e corridas à beira-mar.</p>
+                <p>Rodeada por edifícios e quiosques, a orla da praia abriga diversas barracas que servem porções deliciosas e bebidas geladas, muitas das quais proporcionam conforto adicional com cadeiras e guarda-sóis para os clientes. Além disso, explorando os arredores, é possível encontrar uma variedade de opções, desde restaurantes e lanchonetes até padarias, postos de combustível, supermercados, farmácias e mercadinhos, proporcionando praticidade e variedade aos frequentadores deste destino praiano.</p>
+            </div>
+
+            <div>
+                <h3>Fortaleza de Santo Amaro da Barra Grande</h3>
+                <p>A Fortaleza de Santo Amaro da Barra Grande, uma relíquia histórica, proporciona vistas panorâmicas do mar. Erguida em 1584 em Guarujá, São Paulo, Brasil, a fortaleza tinha o propósito inicial de proteger a Vila de Santos contra incursões piratas, sendo estrategicamente posicionada sobre o canal de acesso ao estuário do maior porto da América Latina. A localização estratégica permitia que os soldados tivessem uma visão privilegiada de todas as entradas do porto, usando seus canhões para dissuadir potenciais invasores.</p>
+                <p>Em 1964, a Fortaleza da Barra foi oficialmente reconhecida como Patrimônio Histórico Nacional pelo IPHAN. Atualmente aberta ao público, a fortaleza desempenha o papel de museu histórico, dedicado à valorização e preservação do rico patrimônio cultural e da memória histórica da cidade de Guarujá e do porto de Santos. A visita proporciona não apenas uma imersão na história da região, mas também a oportunidade de apreciar vistas deslumbrantes do oceano, tornando-a um destino cultural e turístico significativo na região.</p>
+            </div>
+
+            <div>
+                <h3>Trilha do Conde</h3>
+                <p>A Trilha Ecológica do Conde oferece uma experiência única ao proporcionar vistas espetaculares da Mata Atlântica e conduzir os visitantes até uma encantadora cachoeira. Este destino torna-se distintivo por ser o primeiro e único ponto de ecoturismo com esportes radicais na região, oferecendo trilhas adaptadas para todos os gostos e habilidades, desde percursos leves, médios e moderados até uma trilha infantil especialmente projetada para crianças com mais de 6 anos.</p>
+                <p>Aberto diariamente das 9h às 17h, o local requer agendamento apenas nos dias úteis, de terça a sexta-feira. Além de ser uma opção destacada entre as trilhas em Guarujá, a Trilha do Conde permite a prática de diversos esportes radicais, incluindo arvorismo, rapel, tirolesa e escalada. O acesso ao Parque do Conde é facilitado pela Estrada Guarujá/Bertioga, no Km 14,5, proporcionando uma jornada emocionante e integrada com a natureza exuberante da região.</p>
+            </div>
+
+            <div>
+                <h3>Forte dos Andradas</h3>
+                <p>O Forte dos Andradas é um complexo bélico construído durante a Segunda Guerra Mundial, concluído em 1942. Com arquitetura militar única, esconde canhões para proteger o porto de Santos de invasões piratas. Mantido pela 1ª Brigada da Artilharia Antiaérea, o forte é aberto gratuitamente ao público, oferecendo passeios monitorados para explorar seus túneis e câmaras. Atualmente, abriga o quartel-general da 1ª Brigada, desempenhando papel estratégico na defesa das regiões Sul e Sudeste.</p>
+                <p>Sob a responsabilidade da 1ª Brigada da Artilharia Antiaérea, o forte está aberto à visitação pública gratuita, proporcionando uma oportunidade única de explorar suas instalações.</p>
+            </div>
         <hr>
         <a href="index.html">voltar</a>
 
