--- a/index.html
+++ b/index.html
@@ -14,14 +14,15 @@ Explore o encanto costeiro e a rica história das cidades que compõem a deslumb
     </p>
     <p>Conheça nossas cidades:</p>
     <ul>
-        <li><a href="santos.html">Santos</a></li>
-        <li><a href="saovicente.html">São Vicente</a></li>
-        <li><a href="cubatao.html">Cubatão</a></li>
-        <li><a href="guaruja.html">Guarujá</a></li>
-        <li><a href="praiag.html">Praia Grande</a></li>
         <li><a href="bertioga.html">Bertioga</a></li>
+        <li><a href="guaruja.html">Guarujá</a></li>
+        <li><a href="santos.html">Santos</a></li>
+        <li><a href="cubatao.html">Cubatão</a></li>
+        <li><a href="saovicente.html">São Vicente</a></li>
+        <li><a href="praiag.html">Praia Grande</a></li>
         <li><a href="mongagua.html">Mongaguá</a></li>
         <li><a href="itanhaem.html">Itanhaém</a></li>
+        <li><a href="peruibe.html">Peruíbe</a></li>
     </ul>
     <p>Pronto para Descobrir a Baixada Santista?</p>
     <p>Explore cada cidade, apaixone-se por suas peculiaridades e viva momentos inesquecíveis em um dos destinos mais encantadores do litoral brasileiro. Comece sua jornada agora!</p>
