--- a/itanhaem.html
+++ b/itanhaem.html
@@ -11,6 +11,23 @@
         <h1>Itanhaém</h1>
         <p>
             Itanhaém, situada no litoral sul do estado de São Paulo, é uma cidade que mescla história, belezas naturais e uma atmosfera tranquila. Com suas praias extensas e preservadas, como a Praia dos Sonhos e a Praia do Cibratel, a cidade atrai tanto moradores quanto visitantes em busca de um ambiente mais sereno.</p>
+            <h2>Pontos turisticos de Itanhaém</h2>
+
+            <div>
+                <h3>Ilhas da Cabra</h3>
+                <p>A Ilha das Cabras, situada na Praia dos Pescadores, é um prolongamento continental cercado por rochas e vegetação nativa no topo do morro, adaptada ao ambiente rochoso. De dimensões modestas, seu acesso é viável durante as marés baixas, revelando o prolongamento continental. Durante as marés altas, a passagem se torna possível somente a pé, observando os horários adequados para evitar as ondas impetuosas.</p>
+                <p>Este local tranquilo e pouco frequentado, propício para momentos bucólicos, é procurado especialmente nas manhãs e tardes. As condições favoráveis oferecem oportunidades para fotografar vistas encantadoras da ilha em direção ao continente.</p>
+            </div>
+
+            <div>
+                <h3>Praia dos Pescadores</h3>
+            </div>
+
+            <div>
+                <h3>Cachoeira do Funil</h3>
+                <p>A Cachoeira do Funil é um destino ideal para os amantes do ecoturismo que possuem disposição e bom preparo físico. O acesso à cachoeira exige percorrer uma trilha que tem início na estrada de Embu Guaçu, na Rodovia José Simões Louro Junior, no km 58. Embora o caminho seja desafiador, a recompensa é significativa ao se deparar com uma cachoeira de 50 metros de altura, oferecendo um ambiente propício para o mergulho.</p>
+                <p>O local é deserto e paradisíaco, caracterizado por uma mata bem preservada e densa. A trilha revela uma variedade de paisagens, incluindo labirintos de rochas calcárias, quedas d'água, nascentes e ressurgências de rios, proporcionando oportunidades para um banho refrescante em meio à natureza exuberante.</p>
+            </div>
         <hr>
         <a href="index.html">voltar</a>
 
