--- a/itanhaem.html
+++ b/itanhaem.html
@@ -11,7 +11,7 @@
         <h1>Itanhaém</h1>
         <p>
             Itanhaém, situada no litoral sul do estado de São Paulo, é uma cidade que mescla história, belezas naturais e uma atmosfera tranquila. Com suas praias extensas e preservadas, como a Praia dos Sonhos e a Praia do Cibratel, a cidade atrai tanto moradores quanto visitantes em busca de um ambiente mais sereno.</p>
-<<<<<<< HEAD
+
             <h2>Pontos turisticos de Itanhaém</h2>
 
             <div>
@@ -22,6 +22,8 @@
 
             <div>
                 <h3>Praia dos Pescadores</h3>
+                <p>A Praia dos Pescadores é um cenário costeiro com águas calmas e cristalinas, tornando-a especialmente adequada para famílias com crianças. Reconhecida como uma das praias mais famosas e movimentadas da cidade, seu mar tranquilo e transparente oferece condições ideais tanto para nadar relaxadamente quanto para as famílias desfrutarem de momentos tranquilos enquanto as crianças brincam. Com uma extensa faixa de areia de aproximadamente 600 metros, a praia convida os visitantes a caminhadas e corridas à beira-mar.</p>
+                <p>Rodeada por edifícios e quiosques, a orla da Praia dos Pescadores abriga diversas barracas que servem porções deliciosas e bebidas geladas, muitas das quais fornecem comodidades como cadeiras e guarda-sóis para os clientes.</p>
             </div>
 
             <div>
@@ -29,8 +31,10 @@
                 <p>A Cachoeira do Funil é um destino ideal para os amantes do ecoturismo que possuem disposição e bom preparo físico. O acesso à cachoeira exige percorrer uma trilha que tem início na estrada de Embu Guaçu, na Rodovia José Simões Louro Junior, no km 58. Embora o caminho seja desafiador, a recompensa é significativa ao se deparar com uma cachoeira de 50 metros de altura, oferecendo um ambiente propício para o mergulho.</p>
                 <p>O local é deserto e paradisíaco, caracterizado por uma mata bem preservada e densa. A trilha revela uma variedade de paisagens, incluindo labirintos de rochas calcárias, quedas d'água, nascentes e ressurgências de rios, proporcionando oportunidades para um banho refrescante em meio à natureza exuberante.</p>
             </div>
-=======
->>>>>>> 129a14ef8bb3eeaa26347a8d4e692210dc5541fd
+
+            <div>
+                <h3>Cama do Anchieta</h3>
+            </div>
         <hr>
         <a href="index.html">voltar</a>
 
