--- a/itanhaem.html
+++ b/itanhaem.html
@@ -34,6 +34,17 @@
 
             <div>
                 <h3>Cama do Anchieta</h3>
+                <p>
+                    A Cama de Anchieta é uma atração turística proeminente e uma das formações rochosas mais notáveis da cidade. Com sua configuração plana que assemelha-se a uma espreguiçadeira, coberta por uma grande pedra, cria a impressão de uma ampla cama natural protegida do sol. A passarela de acesso, construída com ipê e materiais derivados do eucalipto ecológico em conformidade com normas de preservação ambiental, estende-se por 220 metros de comprimento e 1,60m de largura.</p>
+                    <p>Este monumento histórico, localizado entre o costão da Praia da Gruta e a Praia do Sonho, é apreciado por turistas e moradores, que encontram na Cama de Anchieta uma referência para contemplar as belezas naturais ao longo do passeio. Além de sua importância histórica, a formação rochosa abriga uma lenda que sugere ser o local preferido do Padre José de Anchieta, onde ele buscava inspiração para compor seus poemas e versos enquanto desfrutava de momentos de descanso.</p>
+
+                    <div>
+                        <h3>Museu Conceição de Itanhaém</h3>
+                        <p>
+                            O Museu Conceição de Itanhaém é um valioso patrimônio histórico. Situado na antiga Casa de Câmara e Cadeia, construída em 1561 e reformada em 1829 para abrigar a Câmara Municipal e a Cadeia, o museu é tombado pelo Conselho de Defesa do Patrimônio Histórico, Arqueológico, Artístico e Turístico (Condephaat). Seu acervo inclui itens de grande relevância para a cultura local, como documentos, fotos e peças que narram a história de Itanhaém.</p>
+                            <p>Além disso, o museu abriga um acervo notável da novela "Mulheres de Areia", transmitida entre 1973 e 1974 pela Rede Tupi, e filmada em Itanhaém. Fotos, jornais e discos de vinil rememoram essa produção, que, assim como a novela "O Espantalho" de 1977 (Rede Record), colocou a cidade no mapa da teledramaturgia. O Museu Conceição de Itanhaém está aberto de terça a sexta, das 9h às 17h, e aos sábados e domingos, das 11h às 17h, com uma taxa de entrada de R$ 2,00. Crianças menores de 12 anos, idosos com mais de 60 anos e pessoas com necessidades especiais têm entrada gratuita, enquanto estudantes e professores podem adquirir meia-entrada mediante apresentação de carteirinha</p>
+                    </div>
+
             </div>
         <hr>
         <a href="index.html">voltar</a>
