--- a/mongagua.html
+++ b/mongagua.html
@@ -7,12 +7,39 @@
 </head>
 <body>
     <div>
+        <a href="index.html">voltar</a>
 
         <h1>Mongaguá</h1>
         <p>
             Mongaguá, localizada no litoral sul de São Paulo, é uma cidade que oferece uma combinação de belas praias, atrativos naturais e uma atmosfera descontraída. Suas extensas faixas de areia, como a Praia do Centro e a Praia da Agenor de Campos, proporcionam um ambiente propício para atividades ao ar livre, desde caminhadas à beira-mar até esportes náuticos.</p>
-        <hr>
-        <a href="index.html">voltar</a>
+
+            <h2>Pontos turisticos de Mongaguá</h2>
+
+            <div>
+                <h3>Plataforma de pesca</h3>
+                <p>A Plataforma de Pesca de Mongaguá, instalada na cidade em 1977, com um impressionante avanço de 400 metros para o mar e extensão de 86 metros para cada lado, a plataforma é sustentada por mais de 100 colunas de apoio. Reconhecida como um dos principais pontos turísticos da cidade, atrai tanto turistas quanto residentes locais. Em suas instalações, encontram-se sanitários, áreas apropriadas para a lavagem de pescados e equipamentos de pesca, garantindo uma experiência completa para os visitantes. A Plataforma de Pesca de Mongaguá opera 24 horas por dia, proporcionando oportunidades de pesca em qualquer momento.</p>
+            </div>
+
+            <div>
+                <h3>Praia do Centro</h3>
+                <p>A Praia do Centro é uma das principais atrações litorâneas em Mongaguá. Estrategicamente localizada próxima ao centro comercial, à Prefeitura Municipal de Mongaguá e à Praça de Eventos Dudu Samba, esta praia urbanizada se destaca pela sua extensa faixa de areia escura, onde o rio Mongaguá deságua. Reconhecida como uma das praias mais movimentadas da cidade, a Praia do Centro frequentemente abriga diversas programações e eventos. Além disso, os visitantes podem desfrutar de uma ampla variedade de quiosques e restaurantes à beira-mar, enriquecendo a experiência na praia.</p>
+            </div>
+
+            <div>
+                <h3>Poço das Antas</h3>
+                <p>O Poço das Antas, representa um dos destinos turísticos mais apreciados na cidade. Essa atração é composta por uma bela queda d'água que se transforma em uma cachoeira, culminando em uma piscina natural, rodeada por exuberante vegetação e trilhas que conduzem a outras quedas d'água. O local está acessível de segunda a domingo, das 8h às 17h, proporcionando aos visitantes a oportunidade de explorar e apreciar a beleza natural do Poço das Antas ao longo da semana.</p>
+            </div>
+
+            <div>
+                <h3>Mirante da Padroeira</h3>
+                <p> Mirante da Padroeira, proporciona uma visão panorâmica singular da cidade e da imponente Serra do Mar. Estrategicamente posicionado no Morro da Padroeira, a única elevação natural entre a Rodovia Padre Manuel da Nóbrega e a orla de Mongaguá, o mirante oferece uma perspectiva única da região.</p>
+                <p>No mirante, encontra-se uma réplica da imagem de Nossa Senhora Aparecida, padroeira de Mongaguá, semelhante à que está exposta na Igreja Matriz de Nossa Senhora Aparecida, localizada no centro da cidade. Além de apreciar a vista, os visitantes podem observar pássaros a partir do deck e desfrutar da pista de skate aos pés da estátua. A entrada é gratuita, tornando o Mirante da Padroeira um local acessível para apreciar a paisagem e as atividades oferecidas.</p>
+            </div>
+
+            <div>
+                <h3>Feira de Artesanato Agenor de Campos</h3>
+                <p>A Feira de Artesanato Agenor de Campos destaca-se com um espaço dedicado ao artesanato local. Localizada no Complexo Plataforma, a feira abriga talentosos artesãos que apresentam uma ampla gama de produtos artesanais. É um destino ideal para compras, oferecendo uma diversidade significativa de itens produzidos localmente. Além disso, a estrutura da feira é construída com materiais sustentáveis, incluindo madeira maciça e tijolos de barro, em conformidade com as normas de preservação ambiental.</p>
+            </div>
 
     </div>
 </body>
