--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pontos turisticos da baixada santista</title>
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
     <div>
@@ -26,6 +27,10 @@ Explore o encanto costeiro e a rica história das cidades que compõem a deslumb
     </ul>
     <p>Pronto para Descobrir a Baixada Santista?</p>
     <p>Explore cada cidade, apaixone-se por suas peculiaridades e viva momentos inesquecíveis em um dos destinos mais encantadores do litoral brasileiro. Comece sua jornada agora!</p>
+
+    <div>
+        <p>um trabalho de <a href="https://github.com/CamilaSantosG" target="_blank">CamilaSantosG </a></p>
+    </div>
 
 </div>
 </body>
