--- a/peruibe.html
+++ b/peruibe.html
@@ -13,6 +13,32 @@
         <p>
             Peruíbe, localizada no litoral sul do estado de São Paulo, é uma cidade que se destaca por suas praias preservadas e pela integração harmoniosa entre natureza e urbanização. Suas extensas faixas de areia, como a Praia do Centro e a Praia do Guaraú, oferecem aos moradores e visitantes espaços para atividades recreativas, banhos de sol e contemplação do mar.</p>
 
+            <h2>Pontos turisticos de Peruíbe</h2>
+                
+            <div>
+                <h3>Mirante da Torre</h3>
+                <p>O Mirante da Torre destaca-se como um ponto turístico bastante visitado em Peruíbe, proporcionando uma visão panorâmica que abrange a cidade e o oceano, esse mirante encontra-se no topo de um morro, situado em uma das elevações mais significativas da localidade, onde se encontram instaladas antenas de TV e telefonia celular.</p>
+            </div>
+
+            <div>
+                <h3>Aquário de Peruíbe</h3>
+                <p>O Aquário de Peruíbe, situado na região central da cidade de Peruíbe. É um espaço público que ocupa uma área construída de 800 metros quadrados. Este aquário abriga uma impressionante coleção com mais de 80 espécies, englobando peixes, répteis, anfíbios e crustáceos.</p>
+                <p>Com seus 15 tanques destinados a água doce, salgada e aqua-terrária, juntamente com quatro aquários e um tanque de contato, o Aquário proporciona aos visitantes a oportunidade de contemplar uma diversidade de espécies marinhas, como peixes recifais, robalos, corvinas, sernambiguiaras, tubarões e raias. Destaca-se ainda o mini-museu dos tubarões, apresentando amostras da espécie, arcada dentária e informações adicionais. O Aquário de Peruíbe está aberto diariamente, adaptando-se aos horários convenientes para os moradores locais e os turistas.</p>
+            </div>
+
+            <div>
+                <h3>Cachoeira do Paraíso</h3>
+                <p>A Cachoeira do Paraíso destaca-se como uma esplêndida queda d'água com uma piscina natural. Integrando o Parque Estadual do Itinguçu, uma Unidade de Proteção Integral estabelecida em 2013 pela Lei Estadual nº 14.982, esta área faz parte do Mosaico de Unidades de Conservação Juréia Itatins, junto com o PE do Prelado, RDS Barra do Una, RDS do Despraiado, EE Juréia-Itatins e RVS das Ilhas do Abrigo e Guararitama.</p>
+                <p>A cachoeira impressiona com uma queda de aproximadamente 60 graus de inclinação e 17 metros de comprimento. Reconhecida como um dos principais atrativos de Peruíbe durante o verão, ela está localizada a 25 km do centro da cidade, sendo acessível por meio do Parque Estadual do Itinguçu.</p>
+            </div>
+
+            <div>
+                <h3>Estação Ecológica de Juréia-Itatins</h3>
+                <p>
+                    A Estação Ecológica da Juréia-Itatins é uma Unidade de Proteção Integral criada em 2013, cobrindo quatro municípios. Com 84.425 hectares, destaca-se como uma das áreas mais preservadas da Mata Atlântica no Brasil, abrigando uma rica biodiversidade com espécies raras e endêmicas. Banhada por rios formados nas serras e morros, a estação engloba praias, costões rochosos, manguezais e diversos tipos de florestas, sendo uma das últimas áreas em São Paulo a preservar tal diversidade.</p>
+                    <p>Como parte do Mosaico de Unidades de Conservação Juréia Itatins, a estação busca a preservação da natureza e realiza pesquisas científicas. Suas paisagens únicas, flora e fauna excepcionais fazem dela um importante patrimônio ambiental, promovendo a conservação em meio a uma das regiões mais bem preservadas da Mata Atlântica no país.</p>
+            </div>
+
     </div>
 </body>
 </html>
