--- a/praiag.html
+++ b/praiag.html
@@ -7,11 +7,34 @@
 </head>
 <body>
     <div>
+        <a href="index.html">voltar</a>
 
         <h1>Praia Grande</h1>
         <p>Praia Grande, situada no litoral de São Paulo, é uma cidade que se destaca por suas extensas praias, infraestrutura turística e atividades de lazer. Com uma atmosfera vibrante, a cidade atrai moradores locais e turistas ao longo do ano.</p>
-        <hr>
-        <a href="index.html">voltar</a>
+
+        <h2>Pontos turisticos de Praia Grande</h2>
+
+        <div>
+            <h3>Palácio das Artes</h3>
+            <p>
+                O Palácio das Artes destaca-se como um complexo cultural multifacetado que engloba o Teatro Municipal Serafim Gonzalez, o Museu da Cidade e a Galeria de Artes Nilton Zanotti. Além de sua arquitetura imponente, o palácio é um polo de entretenimento que oferece diversas opções, desde envolventes espetáculos teatrais até exposições de renome. Este espaço vibrante contribui significativamente para a vida cultural da região, proporcionando aos visitantes uma rica experiência artística e histórica.</p>
+        </div>
+
+        <div>
+            <h3>Portinho</h3>
+            <p>O Portinho é um parque que proporciona uma experiência ideal para momentos em família e com amigos. Com quiosques disponíveis para churrascos e diversas áreas de convívio, é um local perfeito para passar o dia desfrutando de momentos agradáveis. Para agendar um horário, basta acessar o site oficial de turismo da cidade.</p>
+        </div>
+
+        <div>
+            <h3>Praia do Canto do Forte</h3>
+            <p>A Praia do Canto do Forte é reconhecida por suas águas cristalinas e areia branca. Esta praia, próxima a São Vicente, oferece uma estrutura completa, incluindo um calçadão, quiosques, serviços de salva-vidas, restaurantes, hotéis e serviços de limpeza da praia. Destacando-se como uma das praias mais populares da cidade, atrai tanto turistas quanto moradores locais.</p>
+        </div>
+        
+        <div>
+            <h3>Praia da Guilhermina</h3>
+            <p>
+                A Praia da Guilhermina destaca-se por suas águas cristalinas e areia branca. Próxima a São Vicente, a praia oferece uma infraestrutura completa, incluindo um calçadão, quiosques, serviços de salva-vidas, restaurantes, hotéis e serviços de limpeza da praia. Reconhecida como uma das praias mais populares da cidade, é frequentada tanto por turistas quanto por moradores locais.</p>
+        </div>
 
     </div>
 </body>
