--- a/santos.html
+++ b/santos.html
@@ -7,13 +7,38 @@
 </head>
 <body>
     <div>
+        <a href="index.html">voltar</a>
 
         <h1>Santos</h1>
         <p>
             Santos, situada no litoral do estado de São Paulo, destaca-se por sua rica história, influência portuária e encantadora atmosfera à beira-mar. As icônicas praias, como a Praia do Gonzaga, Praia do Boqueirão e Praia da Aparecida, atraem residentes e turistas para desfrutar de momentos de lazer e participar de eventos culturais.</p>
-        <hr>
-        <a href="index.html">voltar</a>
+
+            <h2>Pontos turisticos de Santos</h2>
+
+            <div>
+                <h3>Aquário Municipal de Santos</h3>
+                <p>O Aquário Municipal de Santos, situado na Ponta da Praia em Santos, é um aquário público que não apenas encanta os visitantes com sua localização à beira-mar, mas também oferece uma experiência única de observação da vida marinha. O aquário abriga uma vasta diversidade de espécies marinhas e de água doce, proporcionando aos visitantes a oportunidade de admirar tubarões, pinguins, estrelas-do-mar, ouriços, caranguejos-eremitas, anêmonas e outros moluscos. Além disso, o aquário se destaca por integrar museus dedicados à história natural e à pesca, enriquecendo ainda mais a experiência dos visitantes ao proporcionar informações detalhadas sobre o ecossistema marinho e a importância da pesca na região.</p>
+            </div>
+
+            <div>
+                <h3>Passeio de Escuna Ponte Edgard Perdigão</h3>
+                <p>
+                    O Passeio de Escuna Ponte Edgard Perdigão é uma atração turística náutica que oferece uma visão panorâmica espetacular da costa de Santos. Operado pela empresa Escuna Mestre dos Mares, o passeio tem cerca de 1h30 de duração e parte da Ponte Edgard Perdigão, na Ponta da Praia. Ao longo do trajeto, que inclui pontos turísticos entre Santos e Guarujá, como a Fortaleza da Barra, a Praia do Góes, a Praia do Cheira Limão, a Praia do Sangava, a Ilha das Palmas e a orla da baía de Santos, a tripulação, vestida de piratas, compartilha histórias fascinantes sobre a região.</p>
+                    <p>Durante a viagem, os passageiros não apenas desfrutam da narrativa envolvente, mas também têm a oportunidade de saborear salgadinhos, refrigerantes, batidas, caipirinhas e água. O passeio está disponível diariamente durante a alta temporada (dezembro até o carnaval) e, após esse período, ocorre aos finais de semana e feriados.</p>
+            </div>
+
+            <div>
+                <h3>Pantheon dos Andradas</h3>
+                <p>O Pantheon dos Andradas é um monumento histórico situado na Praça Barão do Rio Branco. Este mausoléu foi concebido para abrigar os restos mortais de José Bonifácio de Andrada e Silva, conhecido como o Patriarca da Independência, além de seus irmãos Antônio Carlos Ribeiro de Andrada Machado e Silva, Patrício Manuel, e Martim Francisco Ribeiro de Andrada. Inaugurado em 7 de setembro de 1923, o Pantheon dos Andradas ocupa o local que anteriormente abrigava a portaria do Convento do Carmo. O monumento compreende uma capela, uma igreja e um museu de arte sacra, sendo projetado pelo escultor Rodolfo Bernardelli, com as peças esculpidas na Itália. Adicionalmente, o Pantheon ostenta oito painéis de bronze em baixo-relevo que narram cenas significativas da história do Brasil.</p>
+            </div>
+
+            <div>
+                <h3>Escultura Tomie Ohtake</h3>
+                <p>
+                    A Escultura Tomie Ohtake, situada na Praia do José Menino, constitui uma obra pública que presta homenagem à renomada artista plástica Tomie Ohtake. A escultura assume a forma de uma fita imponente de aço, pintada de vermelho, com impressionantes 15 metros de altura e 28 metros de comprimento. Sua inauguração, ocorrida em 2008, celebrou o centenário da imigração japonesa no Brasil. Destacando-se como um dos pontos turísticos mais emblemáticos de Santos, a escultura atrai visitantes tanto locais quanto turistas.</p>
+            </div>
 
     </div>
+
 </body>
 </html>
