--- a/saovicente.html
+++ b/saovicente.html
@@ -7,11 +7,39 @@
 </head>
 <body>
     <div>
+        <a href="index.html">voltar</a> 
 
       <h1>São Vicente</h1>
       <p>São Vicente, situada no litoral do estado de São Paulo, é uma cidade que possui uma rica história e características urbanas e naturais distintas. Comumente reconhecida como a primeira vila fundada no Brasil em 1532, São Vicente ostenta um Centro Histórico que preserva construções antigas e igrejas, como a Igreja Matriz, refletindo o legado colonial.</p>
-      <hr>
-        <a href="index.html">voltar</a>  
+
+      <h2>Pontos turisticos de São Vicente</h2>
+
+    <div>
+        <h3>Ilha Porchat</h3>
+        <p>
+            A Ilha Porchat é um promontório situado na costa de São Paulo, entre as baías de São Vicente e Santos, e as praias dos Milionários e Itararé. Destacando-se como um dos principais atrativos turísticos da cidade, a ilha é conectada à ilha de São Vicente por uma ponte. Proporcionando uma vista espetacular das praias ao redor, a Ilha Porchat é reconhecida por abrigar o prestigiado Ilha Porchat Hotel. Além disso, o Ilha Porchat Clube, que oferece instalações como sauna, três piscinas para adultos e crianças, um restaurante e um salão social com controle climático, é outra atração bastante popular na ilha. Não menos importante, a ilha é palco do Monumento dos 500 anos, projetado por Oscar Niemeyer.</p>
+    </div>
+
+    <div>
+        <h3>Ponte Pênsil</h3>
+        <p>A Ponte Pênsil de São Vicente é uma estrutura suspensa que conecta a ilha ao continente, sendo uma das primeiras pontes suspensas do Brasil. Essa ponte, que realiza a travessia de veículos e pedestres entre Morro dos Barbosas e Japuí, possui 6,4 metros de largura e um vão de 180 metros entre suas torres. Inaugurada em maio de 1914, a ponte passou por um processo de restauração em 2015, incluindo a substituição dos cabos corroídos e outros trabalhos de reparação. Reconhecida como um ícone da cidade, a Ponte Pênsil é tombada como patrimônio histórico.</p>
+    </div>
+
+    <div>
+        <h3>Teleférico São Vicente</h3>
+        <p>
+            O Teleférico São Vicente é um meio de transporte que conduz os visitantes até o cume do Morro do Voturuá, proporcionando uma visão panorâmica da cidade. Com um percurso de 700 metros e uma elevação de 170 metros acima do nível do mar, a viagem de ida e volta tem uma duração aproximada de 11 minutos. O funcionamento do teleférico ocorre de segunda a sexta-feira, das 10h às 16h, e aos finais de semana e feriados, no mesmo horário. A utilização do teleférico está sujeita à capacidade de lotação, ao cumprimento das normas de segurança e às condições climáticas.</p>
+    </div>
+
+    <div>
+        <h3>Parque Ecológico Voturuá</h3>
+        <p>O Parque Ecológico Voturuá é uma área verde que proporciona trilhas para caminhada, cachoeiras e uma rica diversidade de animais e plantas. Espalhado por uma extensão de 850 mil metros quadrados, constitui uma das últimas reservas de Mata Atlântica em meio urbano no país. Reconhecido como um dos destinos turísticos mais procurados em São Vicente, o parque abriga um zoológico que abrange cerca de 150 animais de 20 espécies distintas, incluindo aves, répteis e mamíferos. Além disso, o local oferece uma variedade de atividades adequadas para todas as faixas etárias.</p>
+    </div>
+
+    <div>
+        <h3>Praia de Itararé</h3>
+        <p>A Praia de Itararé, situada em São Vicente, litoral sul de São Paulo, estende-se por 2,5 km ao longo da Baía de Santos. Delimitada pelas Ilhas Porchat e Urubuqueçaba, próxima à divisa com Santos, a praia oferece uma ampla faixa de areia e águas geralmente tranquilas, proporcionando condições ideais para o banho durante a maior parte do ano. Com um calçadão repleto de atrativos, a Praia de Itararé destaca-se como um dos destinos turísticos mais frequentados em São Vicente.</p>
+    </div>
 
     </div>
 </body>
