--- a/bertioga.html
+++ b/bertioga.html
@@ -4,12 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bertioga</title>
+    <link rel="stylesheet" href="bertioga.css">
 </head>
 <body>
-    <div>
-        <a href="index.html">voltar</a>
 
-        <div>
+    <div>
+        
+        <div class="voltar"><a href="index.html">voltar</a></div>
+
+        <div class="text-container">
         <h1>Bertioga</h1>
         <p>Bertioga, localizada no litoral do estado de São Paulo, é uma cidade encantadora que mescla belezas naturais, patrimônio histórico e atmosfera litorânea. Suas praias, como a Praia da Enseada e Guaratuba, atraem visitantes em busca de relaxamento à beira-mar e atividades aquáticas.</p>
         </div>
