--- a/bertioga.html
+++ b/bertioga.html
@@ -10,7 +10,10 @@
 
     <div>
         
-        <div class="voltar"><a href="index.html">voltar</a></div>
+        <div class="margem">
+            <a class="voltar" href="index.html">voltar</a>
+            <a class="proximo" href="guaruja.html">próxima cidade</a>
+        </div>
 
         <div class="text-container">
         <h1>Bertioga</h1>
